efk/efk-fluent-bit.ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: efk-fluent-bit
    io.cattle.field/appId: efk
  name: efk-fluent-bit
  namespace: efk
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: efk-fluent-bit
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2019-03-23T15:53:15Z'
        checksum/config: 63c1132f100b581835ac5bc4c1a81ea8252b7e5255c233adb15316613a58fb6f
      creationTimestamp: null
      labels:
        app: efk-fluent-bit
    spec:
      containers:
      - image: fluent/fluent-bit:0.13.0
        imagePullPolicy: Always
        name: fluent-bit
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /fluent-bit/etc/fluent-bit.conf
          name: config
          subPath: fluent-bit.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: efk-fluent-bit
      serviceAccountName: efk-fluent-bit
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /var/log
          type: ''
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
          type: ''
        name: varlibdockercontainers
      - configMap:
          defaultMode: 420
          name: efk-fluent-bit-config
        name: config
  templateGeneration: 41
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
