efk/efk-kibana.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":30661,"protocol":"TCP","serviceName":"efk:efk-kibana","allNodes":true},{"addresses":["\u003cnil\u003e"],"port":80,"protocol":"HTTP","serviceName":"efk:efk-kibana","ingressName":"efk:efk-kibana","hostname":"efk-kibana.efk.51.77.136.161.xip.io","allNodes":true}]'
  labels:
    app: kibana
    chart: kibana-0.5.0
    heritage: Tiller
    io.cattle.field/appId: efk
    release: efk
  name: efk-kibana
  namespace: efk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kibana
      release: efk
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kibana
        release: efk
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: efk-kibana
        image: docker.elastic.co/kibana/kibana-oss:6.2.4
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
