efk/efk-elasticsearch.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.137.98"],"port":31922,"protocol":"TCP","serviceName":"efk:efk-elasticsearch","allNodes":true},{"addresses":["51.77.137.98"],"port":32214,"protocol":"TCP","serviceName":"efk:efk-elasticsearch","allNodes":true}]'
  labels:
    app: elasticsearch
    chart: elasticsearch-0.1.0
    heritage: Tiller
    io.cattle.field/appId: efk
    release: efk
  name: efk-elasticsearch
  namespace: efk
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31922
    port: 9200
    protocol: TCP
    targetPort: http
  - name: transport
    nodePort: 32214
    port: 9300
    protocol: TCP
    targetPort: transport
  selector:
    app: elasticsearch
    component: master
    release: efk
  sessionAffinity: None
  type: NodePort
