efk/ingress-19f429612d12f3574e106fae7c442498.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["daemonset:efk:head"]'
  labels:
    cattle.io/creator: norman
  name: ingress-19f429612d12f3574e106fae7c442498
  namespace: efk
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: head
    uid: f1e0aea7-4d78-11e9-b6db-fa163e2de4ff
spec:
  ports:
  - port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    workloadID_ingress-19f429612d12f3574e106fae7c442498: 'true'
  sessionAffinity: None
  type: ClusterIP
