efk/efk-kibana.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.137.98"],"port":80,"protocol":"HTTP","serviceName":"efk:efk-kibana","ingressName":"efk:efk-kibana","hostname":"efk-kibana.efk.51.77.136.161.xip.io","allNodes":true}]'
  labels:
    app: kibana
    chart: kibana-0.5.0
    heritage: Tiller
    io.cattle.field/appId: efk
    release: efk
  name: efk-kibana
  namespace: efk
spec:
  rules:
  - host: efk-kibana.efk.51.77.136.161.xip.io
    http:
      paths:
      - backend:
          serviceName: efk-kibana
          servicePort: 443
